<resources>
    <string name="app_name">GeoDrone</string>
    <string name="title_activity_primeiro_login">Primeiro Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Menu Principal</string>
    <string name="title_activity_env_img_camera">EnvImgCameraActivity</string>
    <string name="title_activity_reg_chuvas">Registro de Chuvas</string>
    <string name="title_activity_cadastro_pluviosidade">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_cadatrar_usuario">CadatrarUsuarioActivity</string>
    <string name="title_activity_cadatro_usuario">Cadastrar Usuario</string>
    <string name="title_activity_cadatro_cliente">Cadastrar Cliente</string>
    <string name="title_activity_cadastro_imagem">Enviar Foto</string>
    <string name="title_dialog_cadastro_ponto_coleta_chuva">Cadastro Ponto Coleta Chuva</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_registro_pragas">Registro de Pagras</string>
    <string name="title_activity_registro_doenca">Registro de Doencas</string>
    <string name="title_activity_registro_condicao_tempo">Registro de Condicao do tempo</string>
    <string name="title_dialog_confirmar_doenca">Registro de doença</string>
    <string name="title_dialog_confirmar_praga">Registro de praga</string>
    <string name="title_activity_relatorio_registro_pragas">Relatorio de Pagras</string>
    <string name="title_activity_relatorio_registro_doencas">Relatorio de Doencas</string>
    <string name="title_activity_consultar_cliente">Consultar Clientes</string>
    <string name="title_activity_arquivo_previsao_tempo_cliente">Previsão do Tempo Cliente</string>
    <string name="title_activity_arquivo_previsao_tempo_micro_regiao">Previsão do Tempo Regiao</string>
    <string name="title_activity_arquivo_registro_defensivo">Registro de Defensivos</string>
    <string name="title_activity_arquivo_previsao_tempo_consulta">Previsao do Tempo</string>
    <string name="title_activity_arquivo_talhao">Consulta de Talhao</string>
    <string name="title_activity_arquivo_registro_chuva">Relatorio Pluviosidade</string>
    <string name="title_activity_usuarios_mensagem">Usuarios</string>
    <string name="title_activity_consultar_usuarios">Consultar Usuarios</string>
    <string name="title_activity_mensagem">Mensagem</string>
    <string name="title_activity_monitoramento">Monitoramento</string>
    <string name="title_activity_mon">Teste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tile_dialog_cadastrar_talhao">Cadastrar Talhao</string>
    <string name="tile_dialog_alterar_talhao">Alterar Talhao</string>
    <string name="lb_selecione_arquivo">Selecione arquivo a ser enviado</string>
    <string name="lb_arquivo">Arquivo</string>
    <string name="lb_cliente">Cliente</string>
    <string name="lb_codigo">Codigo</string>
    <string name="lb_cpf_cnpj">CPF/CNPJ</string>
    <string name="lb_cpf">cpf</string>
    <string name="lb_cnpj">cnpj</string>
    <string name="lb_nome">Nome</string>
    <string name="lb_sobrenome">Sobrenome</string>
    <string name="lb_celular">Celular</string>
    <string name="lb_telefone">Telefone</string>
    <string name="lb_email">Email</string>
    <string name="lb_email_cpf_cnpj">Email/Cpf/Cnpj</string>
    <string name="lb_status">Status</string>
    <string name="lb_senha">Senha</string>
    <string name="lb_confirmar">Confirmar</string>
    <string name="lb_inserir">Inserir</string>
    <string name="lb_alterar">Alterar</string>
    <string name="lb_cancelar">Cancelar</string>
    <string name="lb_confirmar_senha">Confirmar Senha</string>
    <string name="lb_login">Login</string>
    <string name="lb_registrar">Registrar</string>
    <string name="lb_mensagem">Mensagem</string>
    <string name="lb_microregiao">Micro Regiao</string>
    <string name="lb_profile">Profile</string>
    <string name="lb_observacao">Observação</string>
    <string name="lb_dose">Dose</string>
    <string name="lb_tipo_praga_doenca">Tipo de Praga/Doença</string>
    <string name="lb_tipo_praga">Tipo de Praga</string>
    <string name="lb_tipo_cultivo">Tipo de Cultivo</string>
    <string name="lb_tipo_defensivo">Tipo de Defensivo</string>
    <string name="lb_direcao">Direçao</string>
    <string name="lb_pesquisar">pesquisar</string>
    <string name="lb_defensivo_quimico">Defensivo Quimico</string>
    <string name="lb_praga">Praga</string>
    <string name="lb_praga_doenca">Praga/Doença</string>
    <string name="lb_qtd_pragas">Qtde</string>
    <string name="lb_latitude">Latitude</string>
    <string name="lb_longitude">Longitude</string>
    <string name="lb_ponto_registro_pluviosidade">Ponto de Coleta</string>
    <string name="lb_pesquisar_item">Pesquisar Item</string>
    <string name="lb_doenca">Doenca</string>
    <string name="lb_qtd_doencas">Qtde</string>
    <string name="lb_volume_chuva">Volume</string>
    <string name="lb_url">URL</string>
    <string name="lb_segmento">Segmento</string>
    <string name="lb_logradouro">Logradouro</string>
    <string name="lb_bairro">Bairro</string>
    <string name="lb_localidade">Municipio</string>
    <string name="lb_numero">Numero</string>
    <string name="lb_complemento">Complemento</string>
    <string name="lb_cep">Cep</string>
    <string name="lb_descricao">Descricao</string>
    <string name="lb_ativo">Ativo</string>
    <string name="lbl_pressionarparasair">Pressione novamente para sair</string>
    <string name="lb_dt_inicio">Data Inicio</string>
    <string name="lb_dt_fim">Data Fim</string>
    <string name="lb_alterar_senha">Alterar Senha Usuario</string>
    <string name="lb_alterar_cliente">Alterar Cliente</string>
    <string name="lb_recuperar_senha">Recuperar Senha</string>
    <string name="lb_talhao">Talhao</string>
    <string name="lb_estagio_infestacao">Estagio Infestacao</string>
    <string name="lb_dt_previsao">Data Previsao</string>
    <string name="lb_perfi">Perfil</string>
    <string name="lb_alterar_usuario">Alterar Usuario</string>
    <string name="lb_cadastrar_usuario">Cadastrar Usuario</string>
    <string name="lb_btn_enviar_arquivo">Enviar Arquivo</string>
    <string name="lb_btn_salvar">Salvar</string>
    <string name="lb_btn_salvar_registro_praga">Salvar Registro Praga</string>
    <string name="lb_btn_salvar_registro_doenca">Salvar Registro Doença</string>
    <string name="lb_btn_gerar_relatorio">Gerar Relatorio</string>
    <string name="lb_possui_registro_doenca">Possui registro de doença?</string>
    <string name="lb_possui_registro_praga">Possui registro de praga?</string>
    <string name="lb_btn_salvar_dose_defensivo">Salvar Dose Defensivo</string>
    <string name="lb_sim">Sim</string>
    <string name="lb_nao">Não</string>
    <string name="lb_registro_condicao_tempo">Condição do Tempo</string>
    <string name="lb_confirma_registro_condicao_tempo">Confirma registro de Condição do Tempo?</string>
    <string name="lb_aceite_usuario">Aceitar Contrato de uso</string>
    <string name="lb_check_aceite_usuario">Li e concordo com termos do contrato</string>
    <string name="msg_obr_codigo">É obrigatorio informar o campo codigo</string>
    <string name="msg_obr_descricao">É obrigatorio informar o campo descricao</string>
    <string name="msg_obr_ativo">É obrigatorio informar o campo ativo</string>
    <string name="msg_obr_nome">É obrigatorio informar o campo nome</string>
    <string name="msg_obr_sobrenome">É obrigatorio informar o campo sobrenome</string>
    <string name="msg_obr_telefone">É obrigatorio informar o campo telefone</string>
    <string name="msg_obr_email">É obrigatorio informar o campo email</string>
    <string name="msg_obr_senha">É obrigatorio informar o campo senha</string>
    <string name="msg_obr_confirmar_senha">É obrigatorio informar o campo confirmar senha</string>
    <string name="msg_obr_login_sucesso">Login Sucesso</string>
    <string name="msg_obr_doenca">É obrigatorio informar o campo doenca</string>
    <string name="msg_obr_praga">É obrigatorio informar o campo praga</string>
    <string name="msg_obr_qtde">É obrigatorio informar o campo qtde</string>
    <string name="msg_obr_volume">É obrigatorio informar o campo volume</string>
    <string name="msg_obr_ponto_coleta_chuva">É obrigatorio informar o Ponto de Coleta de Chuva</string>
    <string name="msg_obr_aceite_usuario">É obrigatorio selecionar o campo de aceite</string>
    <string name="msg_obr_dt_inicio">É obrigatorio informar o campo Data Inicio</string>
    <string name="msg_obr_dt_fim">É obrigatorio informar o campo Data Fim</string>
    <string name="msg_inv_dt_inicio">Conteudo do campo Data Inicio é invalido</string>
    <string name="msg_inv_dt_fim">Conteudo do campo Data Inicio é invalido</string>
    <string name="msg_obr_tipo_defensivo">É obrigatorio informar o campo Tipo Defensivo</string>
    <string name="msg_obr_dt_registro">É obrigatorio informar o campo Dt Registro</string>
    <string name="msg_obr_dose">É obrigatorio informar o campo dose</string>
    <string name="msg_obr_talhao">É obrigatorio informar o campo Talhao</string>
    <string name="msg_inv_senha_dif_confirmar_senha">Campo confirmar senha diferente do campo senha</string>
    <string name="msg_inv_login">Login Invalido</string>
    <string name="msg_operacao_sucesso">Operacao realizada com sucesso</string>
    <string name="msg_nova_senha_enviada">Sua nova senha foi enviada para seu email</string>
    <string name="msg_erro_cadastrar_registro_doenca">Erro ao cadastrar registro de doenca</string>
    <string name="msg_erro_500">Erro interno do servidor</string>
    <string name="msg_sem_conexao_internet">Você não tem conexão com internet</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing emailcompletions."</string>
    <string name="menu_geo_clima">GeoClima</string>
    <string name="menu_ponto_coleta_chuva">\tPonto Coleta Chuva</string>
    <string name="menu_registro_chuva">\tRegistro Chuva</string>
    <string name="menu_registro_foto">\tRegistro Fotos</string>
    <string name="menu_registro_condicoes_tempo">\tRegistro Condiçoes Tempo</string>
    <string name="menu_relatorio_registro_chuva">\tRelatorio Registro Chuva</string>
    <string name="menu_comunicacao">\tComunicação</string>
    <string name="menu_mensagem">\t\tMensagem</string>
    <string name="menu_forum">\t\tForum</string>
    <string name="menu_geoomonitora">GeooMonitora</string>
    <string name="menu_registro_talhao">\tRegistro Talhao</string>
    <string name="menu_monitoramento">\tMonitoramento</string>
    <string name="menu_defensivo_doses">\tDefensivos e Doses</string>
    <string name="menu_rota_trabalho">\tRota Trabalho</string>
    <string name="menu_requisitar_arquivos_pragas">\tRequisitar Arquivos Pragas</string>
    <string name="menu_requisitar_arquivos_doencas">\tRequisitar Arquivos Doencas</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_sincronizacao">\tSincronizaçao</string>
    <string name="action_configuracao">Configuracao</string>
    <string name="action_logout">Logout</string>
    <string name="action_alterar_cliente">Alterar Cliente</string>
    <string name="action_alterar_senha">Alterar Senha</string>
    <string name="action_usuarios">Usuarios</string>
</resources>