<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_configuracao"
        android:orderInCategory="100"
        android:title="@string/action_configuracao"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_alterar_senha"
        android:orderInCategory="100"
        android:title="@string/action_alterar_senha"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_alterar_cliente"
        android:orderInCategory="100"
        android:title="@string/action_alterar_cliente"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_usuarios"
        android:orderInCategory="100"
        android:title="@string/action_usuarios"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
