<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    tools:context=".ui.registropraga.RegistroPragaActivity">

    <LinearLayout
        android:id="@+id/linear_layout_tipo_cultivo_pagra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/lb_tipo_cultivo"
            />

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinner_tipo_cultivo_praga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--NEW LINE!-->
    <LinearLayout
        android:id="@+id/linear_layout_pagra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_tipo_cultivo_pagra"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lb_praga"
            android:visibility="visible" />

        <AutoCompleteTextView
            android:id="@+id/autoCompletePraga"
            android:hint="@string/lb_pesquisar"
            android:completionThreshold="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--NEW LINE!-->

    <!--  qtde -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_qtde_praga"
        android:layout_below="@+id/linear_layout_pagra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/edit_text_qtde_praga"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/lb_qtd_pragas" />
    </android.support.design.widget.TextInputLayout>

    <!--  Observacao -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_obs_praga"
        android:layout_below="@+id/text_input_layout_qtde_praga"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/edit_text_obs_praga"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/lb_observacao" />
    </android.support.design.widget.TextInputLayout>



    <!--NEW LINE!-->
    <Button
        android:id="@+id/btn_salvar_praga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_qtde_praga"
        android:layout_marginTop="15dp"
        style="@style/CustomStyleButton"
        android:text="@string/lb_btn_salvar" />

</RelativeLayout>
